--- a/forum/src/main/resources/application.properties
+++ b/forum/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.url=jdbc:h2:mem:alura-forum
 spring.datasource.username=sa
 
 spring.datasource.password=
-
+#
  
 
 # jpa
@@ -27,7 +27,7 @@ spring.jpa.properties.hibernate.format_sql=true
 
 #"spring.jpa.properties.hibernate.format_sql=true" isso só o formata o codigo sql
 
-
+#
 
 
 # h2
@@ -36,10 +36,31 @@ spring.h2.console.enabled=true
 
 spring.h2.console.path=/h2-console
 
- 
+#
+
 
 # jwt
 
 forum.jwt.secret=rm'!@N=Ke!~p8VTA2ZRK~nMDQX5Uvm!m'D&]{@Vr?G;2?XhbC:Qa#9#eMLN\}x3?JR3.2zr~v)gYF^8\:8>:XfB:Ww75N/emt9Yj[bQMNCWwW\J?N,nvH.<2\.r~w]*e~vgak)X"v8H`MH/7"2E`,^k@n<vE-wD3g9JWPy;CrY*.Kd2_D])=><D?YhBaSua5hW%{2]_FVXzb9`8FH^b[X3jzVER&:jw2<=c38=>L/zBq`}C6tT*cCSVC^c]-L}&/
 
 forum.jwt.expiration=86400000
+#
+
+# actuator
+management.endpoint.health.show-details=always
+management.endpoints.web.exposure.include=*
+info.app.name=@project.name@
+info.app.version=@project.version@
+info.app.description=@project.description@
+info.app.encoding=@project.build.sourceEncoding@
+info.app.java.version=@java.version@
+
+
+#só para entender, na primeira linha estou dizendo para o health sempre mostrar todos os detalhes, não só o up. 
+#Na segunda, quero que ele inclua outros endpoints com outras informações sobre a nossa API. 
+#E as duas últimas servem para exibir informações sobre nossa aplicação. 
+
+#No valor, passamos a sintaxe @project.name@. Isso é para falar para o Spring Boot que é para puxar as informações do arquivo 
+#.xml. No .xml, no topo do arquivo, tem as informações de groupId, artifactId, etc. 
+#Conseguimos falar para ele puxar todas essas informações e jogar no actuator.
+ #
